--- a/glamping.html
+++ b/glamping.html
@@ -56,21 +56,25 @@
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
-            <ul class="px-5 package-list">
-              <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
-              <li>Queen memory foam bed</li>
-              <li>Decor, rugs and throw pillows  </li>
-              <li>Side table</li>
-              <li>Small trash can </li>
-              <li>Hand sanitizer </li>
-              <li>Outdoor/indoor lighting</li>
-              <li>Custom letter board announcement</li>
-              <li>Board game</li>
-              <li>Set and teardown is included</li>
-            </ul>
+            <div class="align-text-left">
+              <ul class="px-5">
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Queen memory foam bed</li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Decor, rugs and throw pillows  </li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Side table</li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Small trash can </li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Hand sanitizer </li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Outdoor/indoor lighting</li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Custom letter board announcement</li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Board game</li>
+                <li><i class="fa-solid fa-xs fa-angle-right"></i> Set and teardown is included</li>
+              </ul>
+            </div>
             <h5>Price</h5>
-            <p>$450 a night<sup>*</sup> </p>
-            <p style="font-size: small;"><sup>*</sup>25% due at time of booking</p>
+            <div>
+              <p>$450 a night<sup>*</sup> </p>
+              <p style="font-size: small;"><sup>*</sup>25% due at time of booking</p>
+            </div>
             <div class="pt-4 pb-5">
               <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
             </div>
@@ -93,6 +97,7 @@
               <ul class="list-inline small mb-0 text-white">
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Details-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.pinterest.com/detailsbycyn/_created/" target="_blank"><i class="fab fa-pinterest"></i></a></li>
               </ul>
             </div>
           </div>
@@ -108,5 +113,7 @@
     <script src="js/front.js"></script>
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/20601f6150.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
