--- a/home.html
+++ b/home.html
@@ -214,7 +214,9 @@
               <ul class="list-inline small mb-0 text-white">
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Details-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.pinterest.com/detailsbycyn/_created/" target="_blank"><i class="fab fa-pinterest"></i></a></li>
               </ul>
+
             </div>
           </div>
           <div class="col-sm-12 col-lg-4">
