--- a/lounge.html
+++ b/lounge.html
@@ -59,18 +59,18 @@
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-4">Includes</h5>
-            <ul class="px-5">
-              <li>Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
-              <li>Floor cushions </li>
-              <li>Decor, rugs and throw pillows</li>
-              <li>Picnic table</li>
-              <li>Basket with throw blankets</li>
-              <li>Small trash can</li>
-              <li>Hand sanitizer</li>
-              <li>Outdoor/indoor lighting  </li>
-              <li>Custom letter board announcement</li>
-              <li>Board game</li>
-              <li>Set up and teardown is included </li>
+            <ul class="px-5 package-list">
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Weather-proof canvas 4.5m bell tent (requires 25’ by 25’ space)</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Floor cushions </li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Decor, rugs and throw pillows</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Picnic table</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Basket with throw blankets</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Small trash can</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Hand sanitizer</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Outdoor/indoor lighting  </li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Custom letter board announcement</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Board game</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Set up and teardown is included </li>
             </ul>
             <h5>Price</h5>
             <p>$450 a night<sup>*</sup></p>
@@ -98,6 +98,7 @@
               <ul class="list-inline small mb-0 text-white">
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Details-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.pinterest.com/detailsbycyn/_created/" target="_blank"><i class="fab fa-pinterest"></i></a></li>
               </ul>
             </div>
           </div>
@@ -113,5 +114,7 @@
     <script src="js/front.js"></script>
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/20601f6150.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
