--- a/picnic.html
+++ b/picnic.html
@@ -22,6 +22,9 @@
     <link rel="shortcut icon" href="img/favicon.png">
     <!--Other Fonts-->
     <link rel="stylesheet" href="/webfontkit-20220321-172217/stylesheet.css">
+    <!--Font Awesome js-->
+    <script src="https://kit.fontawesome.com/20601f6150.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <!-- navbar-->
@@ -59,21 +62,22 @@
           </div>
           <div class="col-12 content-styling">
             <h5 class="mt-5">Includes</h5>
-            <ul class="px-5">
-              <li>Handmade low table for 2</li>
-              <li>Dinnerware, glassware, flatware and napkins</li>
-              <li>Decor table, centerpiece and runner</li>
-              <li>Rugs and pillows for seating </li>
-              <li>Basket with throw blankets</li>
-              <li>Small trash can</li>
-              <li>Hand sanitizer </li>
-              <li>Sparkling water and water per guest</li>
-              <li>Custom letter board announcement </li>
-              <li>Charcuterie of meets, cheeses and seasonal assortments</li>
-              <li>Set up and teardown is included</li>
+            <ul class="px-5 package-list">
+              
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Handmade low table for 2</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Dinnerware, glassware, flatware and napkins</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Decor table, centerpiece and runner</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Rugs and pillows for seating </li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Basket with throw blankets</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Small trash can</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Hand sanitizer </li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Sparkling water or water per guest</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Custom letter board announcement </li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Charcuterie of meats, cheeses and seasonal assortments</li>
+              <li><i class="fa-solid fa-xs fa-angle-right"></i> Set up and teardown is included</li>
             </ul>
             <h5>Price</h5>
-            <p>$250 for 2 hours <sup>*</sup> (extra hour can be added on & additional $50 per every couple after)</p>
+            <p>$250 for 2 hours<sup>*</sup> (extra hour can be added on & additional $50 per every couple after)</p>
             <p style="font-size: small;"><sup>*</sup>25% due at time of booking</p>
             <div class="pb-3">
               <a href="contact.html"><button type="button" class="btn btn-design">Book Now</button></a>
@@ -95,6 +99,7 @@
               <ul class="list-inline small mb-0 text-white">
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.facebook.com/Details-by-Cyn-106345495240945" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="list-inline-item"><a class="reset-anchor" href="https://www.instagram.com/detailsbycyn/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                <li class="list-inline-item"><a class="reset-anchor" href="https://www.pinterest.com/detailsbycyn/_created/" target="_blank"><i class="fab fa-pinterest"></i></a></li>
               </ul>
             </div>
           </div>
@@ -109,6 +114,9 @@
     <script src="vendor/glightbox/js/glightbox.min.js"></script>
     <script src="js/front.js"></script>
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
+
+
+  
+
 </html>
