--- a/home.html
+++ b/home.html
@@ -36,16 +36,16 @@
                 <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
                 <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">home </a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
                     <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="Details by Cyn Logo" width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
-                    <li class="nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
-                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
+                    <li class="nav-item"><a class="nav-link" href="glamping.html">glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="lounge.html">lounge</a></li>
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">picnic</a></li>
                   </ul>
                 </div>
               </div>
