--- a/home.html
+++ b/home.html
@@ -36,16 +36,16 @@
                 <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span></span><span></span><span></span></button>
                 <div class="collapse text-center navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="home.html">home </a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html">Home </a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                   </ul>
                   <ul class="navbar-nav d-none d-lg-block px-4">
                     <li class="nav-item m-0"><a class="navbar-brand m-0" href="#!"><img src="img/detail-by-cyn-logo-removebg.png" class="logo-image" alt="Details by Cyn Logo" width="80"></a></li>
                   </ul>
                   <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" href="glamping.html">glamping</a></li>
-                    <li class="nav-item"><a class="nav-link" href="lounge.html">lounge</a></li>
-                    <li class="nav-item"><a class="nav-link" href="picnic.html">picnic</a></li>
+                    <li class="nav-item"><a class="nav-link" href="glamping.html">Glamping</a></li>
+                    <li class="nav-item"><a class="nav-link" href="lounge.html">Lounge</a></li>
+                    <li class="nav-item"><a class="nav-link" href="picnic.html">Picnic</a></li>
                   </ul>
                 </div>
               </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <div class="overlay-image" style="background-image: url(img/HD-photos/glamp-tent7.jpeg); background-position: center; background-repeat: no-repeat; width: 100%; height: 40rem; background-size: cover;"></div>
+                      <div class="overlay-image" style="background-image: url(img/HD-photos/glamp-tent1.jpg); background-position: center; background-repeat: no-repeat; width: 100%; height: 40rem; background-size: cover;"></div>
                       <div class="container carousel-container">
                         <div class="row">
                           <div class="col-12">
@@ -134,8 +134,8 @@
                     </div>
                     <div class="col col-lg-4 g-3 d-flex justify-content-center">
                         <figure>
-                        <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on1.jpeg" alt="instant camera add-on">
-                        <figcaption class="lead text-center add-on-text pt-3">Instant camera</figcaption>
+                        <img class="add-on-imgs" id="camera-add-on" src="img/HD-photos/add-on.jpeg" alt="instant camera add-on">
+                        <figcaption class="lead text-center add-on-text pt-3">Table Setup</figcaption>
                         </figure>
                     </div>
                     <div class="col col-lg-4 g-3 d-flex justify-content-center">
@@ -191,9 +191,9 @@
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
           <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CYcH50hFL5a/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent3.jpeg" alt="instagram photo 3">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CV3FEhis-cL/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-clients3.jpeg" alt="instagram photo 4">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CV3FEhis-cL/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-addon.jpg" alt="instagram photo 4">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
-          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CWBwbm_FtRX/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-tent11.jpeg" alt="instagram photo 5">
+          <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CWBwbm_FtRX/" target="_blank"><img class="img-instagram" src="img/HD-photos/glamp-food.jpg" alt="instagram photo 5">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
           <div class="col-lg-2 col-4 p-0"><a class="d-block instagram-item reset-anchor" href="https://www.instagram.com/p/CXmNU2ylKcu/" target="_blank"><img class="img-instagram" src="img/HD-photos/inside-tent1.jpeg" alt="instagram photo 6">
               <div class="instagram-item-overlay"><i class="fab fa-instagram"></i></div></a></div>
